# stock-split-extractor

./: .gitignore  main.py  pyproject.toml  run_daily.bat
src/adapters/parser/: opendart_xml_parser.py
src/adapters/repository/: composite_repository.py  google_drive_repository.py  local_excel_repository.py  local_json_repository.py
src/adapters/scraper/: dart_web_scraper.py
src/application/: service.py
src/domain/: models.py
src/infrastructure/: __init__.py  config.py  container.py
src/ports/: parser.py  repository.py  scraper.py
